# ORMagic

./: 404.html  LICENSE  README.md  commit.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: coverage.yml  docs.yml  pre_release.yml  release.yml  tests.yml
Development/changelog/: index.html
Development/contributing/: index.html
Development/license/: index.html
Development/roadmap/: index.html
Usage/create-table/: index.html
Usage/custom-primary-key/: index.html
Usage/deleting-updating/: index.html
Usage/fastapi/: index.html
Usage/filtering/: index.html
Usage/foreign-keys/: index.html
Usage/limit-and-offset/: index.html
Usage/many-to-many/: index.html
Usage/order-by/: index.html
Usage/save-read-update-delete/: index.html
Usage/transactions/: index.html
Usage/unique/: index.html
docs/: .pages  index.md  instalation.md  usage.md
docs/Development/: changelog.md  contributing.md  license.md  roadmap.md
docs/Usage/: .pages  create-table.md  custom-primary-key.md  deleting-updating.md  fastapi.md  filtering.md  foreign-keys.md  limit-and-offset.md  many-to-many.md  order-by.md  save-read-update-delete.md  transactions.md  unique.md
docs/overrides/partials/: comments.html
instalation/: index.html
ormagic/: __init__.py  connection.py  cursor.py  data_saver.py  field_utils.py  fields.py  models.py  query.py  sql_utils.py  table_manager.py  transactions.py
pydantic_db/: models.py  sql_utils.py
pypi_workflow/: example.py
search/: search_index.json
tests/: conftest.py  test_close_sqlite_connection_after_exception.py  test_complex_filters_with_q.py  test_convert_to_sql_type.py  test_create_instance_from_data.py  test_create_table.py  test_delete.py  test_drop_table.py  test_example.py  test_fetch_raw_data.py  test_filter.py  test_get.py  test_get_all.py  test_get_intermediate_table_name.py  test_get_object_from_db.py  test_get_sql_type.py  test_limit_and_offset.py  test_order_by.py  test_prepare_data_to_insert.py  test_prepare_fields_to_update.py  test_prepare_values_to_insert.py  test_pydantic_db.py  test_remove_table.py  test_save.py  test_save_model_in_db.py  test_simple_keyword_argument_filters.py  test_sql_injection.py  test_transactions.py  test_update_table.py
