[tool.poetry]
name = "ORMagic"
version = "0.1.0"
description = "Simple ORM based on Pydantic and sqlite3 with minimalistic API"
license = "MIT"
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"
homepage = "https://github.com/SpaceShaman/ORMagic"
repository = "https://github.com/SpaceShaman/ORMagic"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
mypy = "^1.10.1"
ptpython = "^3.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
