[tool.poetry]
name = "ORMagic"
version = "0.6.0"
description = "Simple ORM based on Pydantic and SQLite with minimalistic API"
license = "MIT"
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"
homepage = "https://github.com/SpaceShaman/ORMagic"
repository = "https://github.com/SpaceShaman/ORMagic"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
