[tool.poetry]
name = "ORMagic"
version = "0.14.0"
description = "Simple ORM based on Pydantic and SQLite with minimalistic API"
license = "MIT"
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"
homepage = "https://spaceshaman.github.io/ORMagic/"
documentation = "https://spaceshaman.github.io/ORMagic/"
repository = "https://github.com/SpaceShaman/ORMagic"
keywords = ["sql", "orm", "database", "sqlite", "db", "sqlite3", "pydantic", "fastapi"]
classifiers = [
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2"
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
mypy = "^1.10.1"
mkdocs-material = "^9.5.31"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
mkdocs-git-committers-plugin-2 = "^2.3.0"
mkdocs-include-markdown-plugin = "^6.2.2"
pymdown-extensions = "^10.9"
pygments = "^2.18.0"
mkdocs-awesome-pages-plugin = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
